# famitracker-cx

./: .gitignore  CMakeLists.txt  FamiTracker.aps  README - Preview 2.txt  README - Preview 3.txt  README - Preview 4.txt  README - Preview remarks.txt  README.md  config.h.cmake
Source/: App.cpp  App.hpp  CMakeLists.txt  ChannelHandler.h  ChannelMap.cpp  Channels2A03.cpp  ChannelsFDS.h  ChannelsVRC6.cpp  Common.h  Document.cpp  FtmDocument.cpp  FtmDocument.hpp  Instrument.h  InstrumentFDS.cpp  PatternData.h  Settings.cpp  Settings.h  TrackerChannel.cpp  TrackerChannel.h  TrackerController.cpp  TrackerController.hpp  alsa.cpp  alsa.hpp  common.hpp  main.cpp  sound.cpp  sound.hpp  stdafx.h  wavoutput.cpp  wavoutput.hpp
Source/APU/: APU.CPP  APU.H  APU.cpp  APU.h  CMakeLists.txt  DPCM.CPP  DPCM.cpp  DPCM.h  FDS.CPP  FDS.H  FDS.cpp  FDS2.cpp  FDSSound.cpp  FDSSound.h  MMC5.CPP  MMC5.cpp  Mixer.cpp  N106.CPP  N106.H  N106.cpp  Noise.cpp  Noise.h  S5B.cpp  S5B.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  VRC6.CPP  VRC6.H  VRC6.cpp  VRC7.CPP  VRC7.h
Source/linux/: App.cpp  App.hpp  ChannelHandler.cpp  ChannelMap.cpp  Channels2A03.cpp  Channels2A03.h  ChannelsMMC5.cpp  ChannelsVRC6.cpp  ChannelsVRC6.h  Document.cpp  Document.hpp  FamiTrackerTypes.h  FtmDocument.cpp  FtmDocument.hpp  Instrument.cpp  Instrument.h  Instrument2A03.cpp  InstrumentVRC6.cpp  PatternData.cpp  Sequence.cpp  Settings.cpp  Settings.h  TrackerChannel.cpp  TrackerChannel.h  TrackerController.cpp  TrackerController.hpp  alsa.cpp  alsa.hpp  exceptions.cpp  exceptions.hpp  main.cpp  sound.cpp  sound.hpp  types.hpp
Source/qt-gui/: CMakeLists.txt  FrameView.cpp  FrameView.hpp  MainWindow.cpp  MainWindow.hpp  PatternView.cpp  PatternView.hpp  gui.cpp  gui.hpp  mainwindow.ui  threads.cpp
Source/sound/: CMakeLists.txt  alsa.cpp  alsa.hpp
src/: App.cpp  CMakeLists.txt  ChannelHandler.cpp  ChannelMap.cpp  ChannelsFDS.cpp  ChannelsMMC5.h  FtmDocument.cpp  Instrument2A03.cpp  defaults.hpp  main.cpp  parse_arguments.cpp  parse_arguments.hpp  version.hpp
src/APU/: CMakeLists.txt  DPCM.cpp  MMC5.h  N106.cpp  Triangle.cpp
src/console-play-ui/: CMakeLists.txt  main.cpp
src/console-play-ui/install/: famitracker-play.sh
src/core/: App.cpp  App.hpp  CMakeLists.txt  COPYING  ChannelMap.h  CustomExporterInterfaces.h  Document.cpp  Document.hpp  FtmDocument.cpp  FtmDocument.hpp  InstrumentVRC6.cpp  PatternData.cpp  PatternData.h  TrackerController.hpp  common.hpp  io.cpp  io.hpp  module.cpp  module.hpp  ringbuffer.hpp  soundsink.cpp  soundsink.hpp  soundthread.cpp  soundthread.hpp  threadpool.cpp  threadpool.hpp  time.hpp  types.hpp  wavoutput.cpp  wavoutput.hpp
src/core/APU/: Channel.h  External.h  FDSSound.cpp  MMC5.cpp  S5B.cpp  VRC7.h
src/core/common/: libraries.hpp  platform.hpp
src/famitracker-core/: App.cpp  App.hpp  CMakeLists.txt  ChannelHandler.cpp  ChannelHandler.h  ChannelMap.cpp  ChannelMap.h  Channels2A03.cpp  Channels2A03.h  ChannelsFDS.cpp  ChannelsFDS.h  ChannelsMMC5.cpp  ChannelsVRC6.cpp  ChannelsVRC7.cpp  ChannelsVRC7.h  Common.h  Document.cpp  Document.hpp  FamiTrackerTypes.h  FtmDocument.cpp  FtmDocument.hpp  Instrument.cpp  Instrument.h  Instrument2A03.cpp  InstrumentFDS.cpp  InstrumentVRC6.cpp  InstrumentVRC7.cpp  PatternData.cpp  Sequence.cpp  Sequence.h  SoundGen.cpp  TrackerChannel.cpp  TrackerChannel.h  TrackerController.cpp  TrackerController.hpp  common.hpp  exceptions.hpp  sound.cpp  sound.hpp  types.hpp  (+2 more)
src/famitracker-core/APU/: APU.cpp  APU.h  CMakeLists.txt  Channel.h  DPCM.cpp  FDS.cpp  FDSSound.cpp  FDSSound.h  Mixer.cpp  Mixer.h  Noise.cpp  Triangle.cpp  VRC6.cpp  VRC6.h  VRC7.cpp  VRC7.h  emu2413.c
src/ncurses-ui/: CMakeLists.txt  main.cpp
src/ncurses-ui/install/: famitracker-nc.sh
src/qt-gui/: AboutDialog.cpp  AboutDialog.hpp  CMakeLists.txt  CreateWAV.cpp  CreateWAV.hpp  DocInfo.cpp  DocInfo.hpp  FamiTracker.rc  FrameView.cpp  FrameView.hpp  GUI.cpp  GUI.hpp  GUI_App.cpp  GUI_App.hpp  GUI_Sound.cpp  GUI_Sound.hpp  GUI_ThreadPool.cpp  GUI_ThreadPool.hpp  InstrumentEditor.cpp  InstrumentEditor.hpp  InstrumentEditorTypes.cpp  InstrumentEditorTypes.hpp  MainWindow.cpp  MainWindow.hpp  ModuleProperties.cpp  ModuleProperties.hpp  PatternView.cpp  PatternView.hpp  RowPages.cpp  RowPages.hpp  SequenceEditor.cpp  SequenceEditor.hpp  Settings.cpp  Settings.hpp  about.ui  createwav.ui  gui.cpp  gui.hpp  main.cpp  mainwindow.ui  (+6 more)
src/qt-gui/install/: famitracker-qt.sh
src/qt-gui/pixelfonts/vincent/: COPYING
src/qt-gui/res/: about.html
src/sound/: CMakeLists.txt  alsa.cpp  alsa.hpp  dsound.cpp  dsound.hpp  jack.cpp  jack.hpp  soundthread.cpp  soundthread.hpp
